2010-04-08  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/getlogin_r.c (__getlogin_r_loginuid): When
	reading the loginuid file use a buffer which is always large enough.
	NUL-terminate the string.

	* malloc/malloc.c (_int_malloc): Return NULL if printing error message
	returns.

2010-03-30  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makeconfig (+common-includes): Define.
	(+includes): Use @$(common-objpfx)includes.
	* Makefile (postclean): Remove includes and includes.mk.
	* Makerules ($(common-objpfx)includes.mk): Include and create
	includes.mk.  Create includes.

2010-04-07  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/i386/fallocate.c: Set errno on error.
	* sysdeps/unix/sysv/linux/i386/fallocate64.c: Likewise.

2010-04-08  Andreas Jaeger  <aj@suse.de>

	[BZ #10401]
	* math/s_cprojl.c (__cprojl): Fix implementation to follow C99
	standard.
	* math/s_cprojf.c (__cprojf): Likewise.
	* math/s_cproj.c (__cproj): Likewise.
	* sysdeps/ieee754/ldbl-128ibm/s_cprojl.c (__cprojl): Likewise.
	* math/libm-test.inc (cproj_test): Fix test.

2010-04-08  Roland McGrath  <roland@redhat.com>

	* Makerules (libc-abis): Variable removed.
	($(common-objpfx)libc-abis.h): Depend on Makerules too.
	Use automatic variables in commands.
	Depend on first libc-abis from $(sysdirs) or $(..).

2010-04-07  Ulrich Drepper  <drepper@redhat.com>

	* posix/bug-getopt1.c: New file.
	* posix/bug-getopt2.c: New file.
	* posix/bug-getopt3.c: New file.
	* posix/bug-getopt4.c: New file.
	* posix/bug-getopt5.c: New file.

2009-12-01  Eric Blake  <ebb9@byu.net>

	[BZ #11039]
	* posix/getopt.c (_getopt_internal_r): Skip optional - or + before
	checking lead byte of optstring for :.

	[BZ #11040]
	* posix/getopt.c (_getopt_internal_r): Reject '-;' as short
	option, since it conflicts with "W;" optstring extension.

2009-12-02  Eric Blake  <ebb9@byu.net>

	[BZ #11041]
	* posix/getopt.c (_getopt_internal_r): Handle '-Wfoo' identically